--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .nav {
 	padding-left:40px;
-	background-color:#000000;
+	background-color:#ff4c98;
 }
 
 .branco {
@@ -13,7 +13,7 @@ body {
 }
 
 #responder {
-	color:#ff1d8d;
+	color:#b80093;
 	text-decoration:none;
 	margin-left:150px;
 	margin-top:40px;
