--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,13 @@ body {
 }
 
 .branco {
-	color:#000000;
+	color:#ffc1f3;
 }
 
-#responder {
+#estilomenu {
 	color:#b80093;
 	text-decoration:none;
-	margin-left:150px;
-	margin-top:40px;
+	margin-left:170px;
+	
 	
 }
